[project]
name = "restaurant-strands-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.25",
    "chromadb>=1.4.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langfuse>=3.11.2",
    "markdown>=3.10",
    "ragas>=0.4.2",
    "sentence-transformers>=5.2.0",
    "strands-agents[openai]>=1.21.0",
    "unstructured>=0.18.27",
]
